# Alogrithm

./: .gitignore  Alogrithm.sln  CMakeLists.txt  README.md  compile_commands.json  monster.c  test.md  思路.md
.cache/clangd/index/: main.c.307ABB9E04CB7AFD.idx  main.c.A5C10EBFA40B1CD2.idx  main.c.D62274D2F7A8B1EB.idx  memoryAllocators.c.DD4682E673327299.idx  monster.c.84B5F592AD0201A1.idx  monster.h.B1380909AA4244AB.idx  writeShell.c.E91AD4EF240454D5.idx  writeShell.c.FDCF1582A73040EC.idx  writeShell.h.1D2909D54785F670.idx  writeShell.h.C1641C5C4595A727.idx  writeShell.h.CD29CA2B04142711.idx
CppStudy/: CMakeLists.txt  Gale_shapley  a.out  abc.txt  compile_commands.json
CppStudy/.cache/clangd/index/: 3_2.cpp.813B8CE16AD29BA8.idx  3_2.cpp.DE79D0F2CD759581.idx  3_2.h.CFD2A7964B62F358.idx  4_1.cpp.7AEE68C3A3507770.idx  4_1.cpp.8FF22FC4828AC3BA.idx  4_7.cpp.8F7F878D3C942A46.idx  4_7.cpp.ACB6E1E43CAFB6CB.idx  5_1.cpp.93A5FB188D105EBF.idx  5_1.cpp.CB4654B5269F1302.idx  main.cpp.0D9225716B66B38C.idx  main.cpp.75E19F2F941F2A32.idx  test.c.1E725575AFF39DA0.idx  test.cpp.82CEC24942320B28.idx  test.h.688C4DF892FC2184.idx
CppStudy/a.out.dSYM/Contents/Resources/DWARF/: a.out
CppStudy/include/: 3_2.h  test.h
CppStudy/src/: 3_2.cpp  4_1.cpp  4_7.cpp  5_1.cpp  main.cpp
GtkStudy/: CMakeLists.txt  compile_commands.json  run.sh
GtkStudy/.cache/clangd/index/: chapter7-2.h.3B84CDA52D7834F8.idx  chapter7-2.h.B9A53C6AACD2D7F0.idx  chapter7.h.E22796913B5C6C52.idx  main.c.6BA2BBADC0557FAE.idx  main.c.D5EF3D4325C07F3A.idx
GtkStudy/include/: chapter7-2.h  chapter7.h
GtkStudy/src/: chapter7-2.c  chapter7.c  main.c
gale_shaple/: CMakeLists.txt
gale_shaple/src/: gale_shapley.c
include/: monster.h
markdown/: chapter2.md  妖怪过河.md  感悟.md
markdown/.obsidian/: workspace.json
py/: main.py
py/.pyre/: pyre.stderr
py/.pyre/classic/: server.stderr  server.stderr.2024_05_07_17_14_08_160155  server.stderr.2024_05_07_17_14_24_978913
writeShell/: CMakeLists.txt
writeShell/include/: writeShell.h
writeShell/src/: CMakeLists.txt  main.c  writeShell.c
writeShell/test/: CMakeLists.txt  testSplit.c
